<resources>
    <string name="app_name">Gourmet Savorz</string>
    <string name="spoonacular_api_key">a1d0d1e323af4b46a068a05c6df3fd41</string>
    <string name="available_recipes">Available Recipes</string>
    <string name="new_email">Enter your new email here</string>
    <string name="password"> Please enter your password to verify you are the owner of this account.</string>
    <string name="account">My Account</string>
    <string name="email_change">Now, please enter a new email to use for this account.</string>
    <string name="review_warning">Please note that your reviews and ratings are send to Play Store. Use of vulgar language will lead to account closure. Thank You</string>
    <string name="password_change">Change Password</string>
    <string name="home_button">Home</string>
    <string name="chefs">Chefs For Hire!!</string>
    <string name="alert">Alert</string>
    <string name="enter_email">Enter your email here</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="drinks">Drinks</string>
    <string name="food">Food</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="logo">More</string>
    <string name="enter_password">Enter your password</string>
    <string name="log">Log In</string>
    <string name="remember">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="see">See Password</string>
    <string name="all_recipes">All Recipes</string>
    <string name="sign_out">Sign Out</string>
    <string name="smart">Smart Finder</string>
    <string name="saved">Saved Recipes</string>
    <string name="shopping">Shopping List</string>
    <string name="reviews">Reviews</string>
    <string name="popular">Popular Now</string>
    <string name="recommendations">Recommendations</string>
    <string name="settings">Settings</string>
    <string name="terms">Terms and Conditions</string>
    <string name="about">About Us</string>
    <string name="updates">Updates</string>
    <string name="choose_origin">Choose food Origin</string>
    <string name="skip">Skip</string>
    <string name="other">Other</string>
    <string name="results">Your Results Are Below</string>
    <string name="fruits">Fruits and Vegies</string>
    <string name="restrictions">Restrictions</string>
    <string name="meat">Non-Vegeterian</string>
    <string name="review">Please type your reviews here</string>
    <string name="welcome">Come, join Gourmet Savorz for some top-cass recipes!!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm">Confirm Password</string>
    <string name="create">Create Account</string>
    <string name="google">Sign In with Google</string>
    <string name="sign_up">Sign Up</string>
</resources>